--- a/app/src/main/res/layout/layout_custom_actionbar.xml
+++ b/app/src/main/res/layout/layout_custom_actionbar.xml
@@ -4,11 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/toolbar_masSalud"
     android:layout_height="?attr/actionBarSize"
     android:elevation="4dp"
     app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp"
-    android:background="@android:color/white">
+    app:contentInsetStart="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
